# timebomb

./: .dockerignore  .gitignore  .timebomb.toml  .timebomb.toml.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  deny.toml  dist-workspace.toml  release-please-config.json  release.toml
.github/workflows/: ci.yml  coverage.yml  pages.yml  release.yml  security.yml
benches/: bench.sh  bench_format.py  scanner_bench.rs
docs/: ci.md  commands.md  configuration.md  fuse-format.md  index.md  installation.md  output-formats.md
docs/design/: architecture.md  safety-and-exit-codes.md
docs/examples/: index.md
src/: add.rs  annotation.rs  armory.rs  baseline.rs  blame.rs  cli.rs  config.rs  diff.rs  error.rs  fix.rs  git.rs  hook.rs  init.rs  lib.rs  main.rs  output.rs  remove.rs  report.rs  scanner.rs  snooze.rs  stats.rs  trend.rs
tests/: baseline_tests.rs  config_tests.rs  diff_tests.rs  fix_tests.rs  manifest_tests.rs  scanner_tests.rs
tests/fixtures/: sample.c  sample.clj  sample.cpp  sample.cs  sample.d  sample.dart  sample.erl  sample.ex  sample.fs  sample.go  sample.hs  sample.java  sample.js  sample.kt  sample.lisp  sample.lua  sample.ml  sample.php  sample.py  sample.rb  sample.rkt  sample.rs  sample.sql  sample.swift  sample.ts
