[package]
name = "timebomb"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that scans source code for expiring TODO/FIXME annotations"
license = "MIT"

[lib]
name = "timebomb"
path = "src/lib.rs"

[[bin]]
name = "timebomb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
colored = "2"
rayon = "1"

[dev-dependencies]
tempfile = "3"
