[package]
name = "timebomb"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
description = "Scan source code for deadline-tagged fuses and fail when they detonate"
license = "MIT"
repository = "https://github.com/pbsladek/timebomb"

[lib]
name = "timebomb"
path = "src/lib.rs"

[[bin]]
name = "timebomb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2"
regex = "1"
chrono = "0.4"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
colored = "3"
rayon = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "scanner_bench"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "symbols"
